# rust-opengl-playground

./: .gitignore  Cargo.toml  README.adoc
src/: main.rs  render_gl.rs
